﻿<h3>Version 1.1.6</h3>
<ul>
    <li>New DivisionDirectory module.</li>
    <li>EmployeeDirectory, DivisionDirectory: Added edit links to the search results.</li>
    <li>Make sure that shared employee / division controls have same key names in different modules.</li>
    <li>Other small improvements and fixes.</li>
</ul>

<h3>Version 1.1.5</h3>
<ul>
    <li>EditEmployee: Control now fully localizable.</li>
    <li>EditEmployee: Added russian localization resources.</li>
    <li>EditEmployee: Display document URL in achievements edit form.</li>
    <li>Implemented #55: ViewEmployeeDetails: Added edit button.</li>
    <li>Implemented #56: EmployeeDirectory: Mark unpublished employees.</li>
    <li>Implemented #58: ViewEmployeeDetails: Paint tables with dnnGrid classes.</li>
    <li>Implemented #32: Now short titles also optional for division and position entities.</li>
    <li>Fixed #59: EmpoyeeDirectory: Missing division link.</li>
    <li>EmployeeList: DB requests reduced from (1 + 2*NEmployees) to 3.</li>
    <li>EditDivision: Use treeview to select parent division.</li>
    <li>Other small improvements and fixes.</li>
</ul>

<h3>Version 1.1.4</h3>
<ul>
    <li>Fixed #52: Pressing Enter in the search entry should activate search.</li>
    <li>Fixed #54: EmployeeDirectory: Could search with empty search phrase including subdivisions.</li>
    <li>Implemented #51: EmployeeDirectory: Search by position titles.</li>
    <li>Other small improvements and fixes.</li>
</ul>

<h3>Version 1.1.3</h3>
<ul>
    <li>New EmployeeDirectory module provides search for employees.</li>
    <li>ViewEmployeeDetails: fixes for non-popup mode.</li>
    <li>Other small improvements and fixes.</li>
</ul>

<h3>Version 1.1.2</h3>
<ul>
    <li>Ability to lookup for photo by employee name (also supports transliteration for cyrillic (russian) names).</li>
	<li>Implemented #39: Position entity: Added IsTeacher field and corresponding UI.</li>