@@ -21,6 +21,7 @@ Project("{2150E333-8FDC-42A3-9474-1A3956D46DE8}") = "Solution Items", "Solution 
 	ProjectSection(SolutionItems) = preProject
 		README.md = README.md
 		LICENSE.md = LICENSE.md
+		01.01.06.SqlDataProvider = 01.01.06.SqlDataProvider
 	EndProjectSection
 EndProject
 Global
@@ -138,6 +139,6 @@ Global
 		$0.XmlFormattingPolicy = $14
 		$14.inheritsSet = null
 		$14.scope = application/x-msbuild
-		version = 1.1.6
+		version = 1.1.7
 	EndGlobalSection
 EndGlobal
